# EmbeddedInstrumentCluster

./: .gitignore  README.md
InstrumentClusterApp/: CMakeLists.txt  CMakePresets.json  main-test.cpp
InstrumentClusterApp/build_desktop/: .ninja_deps  .ninja_log  CMakeCache.txt  ClusterApp  build.ninja  cmake_install.cmake
InstrumentClusterApp/build_desktop/.cmake/api/v1/reply/: cache-v2-1d7fdbf55928b96003e1.json  cache-v2-7abd5c5afd54c14ab44b.json  cmakeFiles-v1-6255760e0bd161887339.json  cmakeFiles-v1-8548f6ba93f338c88601.json  codemodel-v2-14a7292990cafa3fdd6c.json  codemodel-v2-23098b897a07edb6e32e.json  index-2026-03-15T21-15-27-0518.json  index-2026-03-19T01-29-40-0851.json  target-ClusterApp-Debug-246c33e57ed3f05dd5a7.json  target-ClusterApp-Debug-7e01b8147b088d608c34.json  target-ClusterApp_autogen-Debug-2846a85808135072affa.json  target-ClusterApp_autogen_timestamp_deps-Debug-1b759bd574dcc9a42bfe.json
InstrumentClusterApp/build_pi/: CMakeCache.txt  ClusterApp  Makefile  cmake_install.cmake
InstrumentClusterApp/src/: AppFont.h  CanWorker.cpp  CanWorker.h  CenterPanel.cpp  CenterPanel.h  ClusterWindow.cpp  ClusterWindow.h  GaugeWidget.cpp  GaugeWidget.h  PillBadge.cpp  PillBadge.h  main.cpp  resources.qrc
buildroot/board/custom_rpi/rootfs_overlay/sbin/: cluster_init
buildroot/board/raspberrypi/: cmdline.txt  config_zero2w.txt
buildroot/configs/: raspberrypi3_defconfig
